--- a/Challenge Breast Cancer Shannon Houtermans.ipynb
+++ b/Challenge Breast Cancer Shannon Houtermans.ipynb
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ff815cda",
+   "execution_count": null,
+   "id": "0e2f23f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "import seaborn as sns\n",
     "import missingno as msno\n",
     "%matplotlib inline\n",
+    "\n",
     "\n",
     "df = pd.read_csv('E:\\Gebruikers\\\\Shannon\\\\Downloads\\\\breast-cancer.csv', sep = ',')\n",
     "#df = pd.read_csv('C:\\\\Users\\\\shann\\\\Downloads\\\\breast-cancer.csv', sep = ',')"
@@ -125,6 +126,59 @@
     "* **Seaborn** to visualise our data.\n",
     "* **Scikit-learn** to provide machine learning algorithms for us to use.\n",
     "* **Missingno** to visualise the completeness of our data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58381b1b",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92f3f05e",
+   "metadata": {},
+   "source": [
+    "### Interviewing for domain understanding\n",
+    "As the topic this project is deeply rooted in healthcare, in which I am not an expert at all, there has only been so much information which I was able to find or confirm which relates to my domain understanding. Therefore, I found it important to speak to somewho who was in fact much more knowledgeable than me about (breast) cancers.\n",
+    "\n",
+    "As my parents are currently active in the healthcare sector and have connections to many medical specialists, I was able to arrange a short interview with **Drs. Aaldering**, who is an Oncologist at the Laurentius hospital in Roermond. It was my intention to have an interview face-to-face, however Drs. Aaldering was facing a very tight schedule due to employee shortages and could therefore not meet in person. Therefore I held a (short) interview over the phone in which I asked the following questions in a semi-rigid structure. As this was a phone call, I was unable to record my conversation and therefore had to write down the answers that she was giving and translate these to English afterwards.\n",
+    "\n",
+    "* **How often does breast cancer occur in people compared to other forms of cancer?**\n",
+    "> Generally speaking, breast cancer is the most common form in which cancer cells manifest in a patient's body, followed by other types of cancer such as lung cancer, colorectal cancer, and prostate cancer. It is overwhelmingly prevalent with women, while breast cancer in men is found in less than 1% of breast cancer cases. \n",
+    "* **How high is the average rate of survival with breast cancer compared to other forms of cancer?**\n",
+    "> This depends a lot on the stage at which the cancer is discovered and the type of growth as well. Breast cancer tumours in the first and second stages are very localised and are therefore easier to treat and survive. In the third stage, the cancer cells will have spread more in the region surrounding the origin of the tumour and therefore chemotherapy and/or mastectomy will be required. At stage four, the tumour will have spread to other parts of the body and therefore make treatment very difficult.\n",
+    "However, compared to other types of cancer, breast cancer boasts a high survival rate in the western world due to advanced screening and treatment techniques. Yet other forms of cancer, such as lung cancer, are very lethal in comparison.\n",
+    "* **What makes malignant tumours so dangerous compared to benign tumours?**\n",
+    "> Benign tumours are quite compact in shape, are capsulated and therefore do not spread around them, and tend to be slow-growing. This makes them easier to remove surgically and decreases the need for destructive treatments such as mastectomy or chemotherapy. Malignant tumours are the opposite, being irregular and spread out, and tend to grow quite fast. This makes them more difficult to remove as not all parts may be able to be removed, causing the cancer to grow back.\n",
+    "* **How are the results of a breast cancer screening analysed by means of mammography?**\n",
+    "> Mammograms are taken by a specialised machine which compresses the breast and takes high-resolution x-ray images, which are then analysed by specialists who look for abnormal masses between the breast tissue. In case the specialists suspect or can clearly see an abnormal mass, they will likely take additional pictures and may take a biopsy of the breast. This will then be sent to a lab and analysed by specialists there. \n",
+    "While mammograms are very manual in nature and require the skilled eyes and thinking of a specialist, they boast an accuracy of between 80% and 85% in identifying women with breast cancer.\n",
+    "* **Do you think that predictions about the type of tumour by means of AI could help medical specialists?**\n",
+    "> I think that artificial intelligence can definitely play a role in detecting breast cancer tumour types, and I have heard of several studies looking into harnessing its potential. However, I do think that artificial intelligence should not have a leading role in determining treatment for the patient based on its diagnosis. Artificial intelligence should be a tool which can be used by medical specialists to help them determine what sort of tumour they could be dealing with here, and possibly start early treatment if warranted. I believe that it would be very risky to put the health of patients at the whims of computers, and I think that a human should make the final decision in this matter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "accf8943",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6a1d07a",
+   "metadata": {},
+   "source": [
+    "### Research question\n",
+    "Now that we have a better understanding of our domain, we can start to formulate the research question that we want to use as the guideline for this project. I want it to be an open question which cannot be answered with just a yes or no-question, but rather with a variable which the algorithm will produce. Therefore I came up with the following research question:\n",
+    "\n",
+    "* **How accurately can the type of breast cancer tumour be predicted using classification algorithms for machine learning?**\n",
+    "\n",
+    "I believe that this question entails most of what I'm trying to achieve with this project, and I hope to be able to answer it at the end of the project."
    ]
   },
   {
@@ -1118,14 +1172,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b26a45c",
-   "metadata": {},
-   "source": [
-    "### Hypothesis (WIP)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "44cabe81",
    "metadata": {},
    "source": [
@@ -1187,7 +1233,7 @@
    "id": "3b1727b7",
    "metadata": {},
    "source": [
-    "# Predictions (WIP)"
+    "# Predictions"
    ]
   },
   {
@@ -2116,10 +2162,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d57b7b4",
+   "metadata": {},
+   "source": [
+    "## 4. Conclusion\n",
+    "As seen in the modelling and evaluation above, the average accuracy of our model in predicting the type of tumour is **94,16%**. While this falls just short of the target variable of 95% accuracy which I set for this project, it is still quite close to the mark and I think that it would be a viable way of determining tumour types with a high degree of accuracy.\n",
+    "\n",
+    "It is also worth noting that the accuracy for malignant tumours is slightly higher than benign ones, which in my opinion is quite positive as malignant tumours are far more dangerous and require early treatment in order to increase the rate of survival."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bfe03557",
    "metadata": {},
    "source": [
     "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74a6df68",
+   "metadata": {},
+   "source": [
+    "# Delivery"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f0a37c3",
+   "metadata": {},
+   "source": [
+    "## 1. Demonstration\n",
+    "I am still waiting for a demonstration and feedback meeting with **Drs. Aaldering** as she currently has a busy schedule and I would really like her to see the product of our interview. However, in case she is not available anytime soon, I will ask someone who is interested in IT and/or healthcare to demonstrate my project for."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dccd2a9f",
+   "metadata": {},
+   "source": [
+    "## 2. Feedback"
    ]
   },
   {
@@ -2155,7 +2237,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
